style and fonts

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
-	<link rel="stylesheet" href="fonts.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto&display=swap">
 	<link rel="stylesheet" href="style.css">
 	<title></title>
 </head>
 <body>
-	<header>
-		<div>app.creation</div>
-		<nav>
-			<a href="">start</a>
-			<a href="">services</a>
-			<a href="">about</a>
-			<a href="">blog</a>
-			<a href="">contact us</a>
+	<header class="header">
+		<div class="header__logo">app.creation</div>
+		<nav class="header__nav">
+			<a class="nav__link" href="">start</a>
+			<a class="nav__link" href="">services</a>
+			<a class="nav__link" href="">about</a>
+			<a class="nav__link" href="">blog</a>
+			<a class="nav__link" href="">contact us</a>
 		</nav>
 	</header>
 	<section>
