--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<header class="header">
-		<div class="header__logo">app.creation</div>
-		<nav class="header__nav">
+		<div class="logo">app.creation</div>
+		<nav class="nav">
 			<a class="nav__link" href="">start</a>
 			<a class="nav__link" href="">services</a>
 			<a class="nav__link" href="">about</a>
@@ -18,14 +18,14 @@
 			<a class="nav__link" href="">contact us</a>
 		</nav>
 	</header>
-	<section>
-		<main>
-			<h1>Building an App Without Design Expertise?</h1>
-			<p>I help tech startups design better digital products without hiring a full-time designer</p>
-			<button>Schedule free consultation</button>
+	<section class="section">
+		<main class="main-content">
+			<h1 class="main-content__title">Building an App Without Design Expertise?</h1>
+			<p class="main-content__description">I help tech startups design better digital products without hiring a full-time designer</p>
+			<button class="main-content__button">Schedule free consultation</button>
 		</main>
-		<div>
-			<img src="">
+		<div class="image-content">
+			<img class="image-content__content" src="">
 		</div>
 	</section>
 </body>
