--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1.0, width=device-width">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto&display=swap">
-	<link rel="stylesheet" href="style.css">
-	<title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0, width=device-width">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto&display=swap">
+  <link rel="stylesheet" href="style.css">
+  <title></title>
 </head>
 <body>
-	<header class="header">
-		<div class="logo">app.creation</div>
-		<nav class="nav">
-			<a class="nav__link" href="">start</a>
-			<a class="nav__link" href="">services</a>
-			<a class="nav__link" href="">about</a>
-			<a class="nav__link" href="">blog</a>
-			<a class="nav__link" href="">contact us</a>
-		</nav>
-	</header>
-	<section class="section">
-		<main class="main-content">
-			<h1 class="main-content__title">Building an App Without Design Expertise?</h1>
-			<p class="main-content__description">I help tech startups design better digital products without hiring a full-time designer</p>
-			<button class="main-content__button">Schedule free consultation</button>
-		</main>
-		<div class="image-content">
-			<img class="image-content__content" src="">
-		</div>
-	</section>
+  <div class="wrapper">
+    <header class="header">
+      <div class="logo">app.creation</div>
+      <nav class="nav">
+        <a class="nav__link" href="">start</a>
+        <a class="nav__link" href="">services</a>
+        <a class="nav__link" href="">about</a>
+        <a class="nav__link" href="">blog</a>
+        <a class="nav__link" href="">contact us</a>
+      </nav>
+    </header>
+    <section class="section">
+      <main class="main-content">
+        <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
+        <p class="main-content__description">I help tech startups design better digital products without hiring a full-time designer</p>
+        <button class="main-content__button">Schedule free consultation</button>
+      </main>
+      <div class="image-content">
+        <img class="image-content__content" src="">
+      </div>
+    </section>
+  </div>
 </body>
 </html>
