--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap">
+  <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="style.css">
   <title></title>
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="logo">app.creation</div>
+      <div class="logo"><div class="logo__circle logo__circle_color_dark-blue"></div><div class="logo__circle logo__circle_color_blue"></div>app.creation</div>
       <nav class="nav">
         <a class="nav__link" href="">start</a>
         <a class="nav__link" href="">services</a>
