--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="logo"><div class="logo__circle logo__circle_color_dark-blue"></div><div class="logo__circle logo__circle_color_blue"></div>app.creation</div>
       <nav class="nav">
         <a class="nav__link" href="">start</a>
-        <a class="nav__link" href="">services</a>
+        <a class="nav__link nav__link_active" href="">services</a>
         <a class="nav__link" href="">about</a>
         <a class="nav__link" href="">blog</a>
         <a class="nav__link" href="">contact us</a>
