--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
   <div class="wrapper">
     <header class="header">
       <div class="logo"><div class="logo__circle logo__circle_color_dark-blue"></div><div class="logo__circle logo__circle_color_blue"></div>app.creation</div>
+      <div class="logo-mobile"><div class="logo-mobile__circle logo-mobile__circle_color_dark-blue"></div><div class="logo-mobile__circle logo-mobile__circle_color_blue"></div></div>
       <nav class="nav">
         <a class="nav__link" href="">start</a>
         <a class="nav__link nav__link_active" href="">services</a>
         <a class="nav__link" href="">about</a>
         <a class="nav__link" href="">blog</a>
-        <a class="nav__link" href="">contact us</a>
+        <a class="nav__link nav__link_no-margin" href="">contact us</a>
+        <a class="nav__burger" href="#"><span class="link__burger"></span></a>
       </nav>
     </header>
       <main class="main">
