--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap">
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="style.css">
-  <title></title>
+  <title>app.creation</title>
 </head>
 <body>
   <div class="wrapper">
